<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">LS Mobile</string>
    <string name="versionDate" translatable="false">20160808</string>
    <string name="action_settings">Settings</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>
    <string name="login_button_title1">Enter Without Login</string>
    <string name="reset_button_title">Reset Password</string>
    <string name="login_button_title2">Login</string>
    <string name="please_wait">Please, wait...</string>
    <string name="network_error">No internet connection. Internet connection is necessary to log into the app.</string>
    <string name="login_error">Incorrect username or password!</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="title_activity_docman_menu">DocmanMenuActivity</string>
    <string name="contact_send">Send</string>
    <string name="contact_reset">Reset</string>
    <string name="opening_schedule">Opening schedule</string>
    <string name="no_mail_account">There are no email clients installed</string>
    <string name="send_mail">Send e-mail</string>
    <string name="support">Support</string>
    <string name="general_docs">General Documents</string>
    <string name="personal_docs">Personal Documents</string>
    <string name="no_docs_available">No documents available</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="profile">Profile</string>
    <string name="contacts">Contacts</string>
    <string name="logout">Logout</string>
    <string name="shopping">Shopping</string>
    <string name="profile_name">Name</string>
    <string name="profile_lastname">Lastname</string>
    <string name="profile_mobile">Mobile</string>
    <string name="profile_email">E-Mail</string>
    <string name="profile_telephone">Telephone</string>
    <string name="date_event">Date</string>
    <string name="create_date_event">Create date</string>
    <string name="time_event">Time</string>
    <string name="title_event">Occasion</string>
    <string name="description_event">Description</string>
    <string name="place_event">Where</string>
    <string name="no_mail_reset">Enter your email or username</string>
    <string name="password_reseted">We have sent a link for reseting your password to your e-mail.</string>
    <string name="reset_error_title">Error</string>
    <string name="reset_error_content">The given information is not right.</string>
    <string name="tittle_password_reset">E-mail has been sent!</string>
    <string name="no_entertainment_avaliable">This functionality does not work with Android 5.x</string>
    <string name="select_BP">Select</string>
    <string name="switch_loggued">Stay Logged</string>
    <string name="service_not_activated">Service not activated</string>
    <string name="service_activated">Service activated</string>
    <string name="shopping_error">It was not possible to activate your new service. Please try again later</string>
    <string name="shopping_confirm">Are you sure want to buy this service?</string>
    <string name="buy">Buy</string>
    <item name="TAGService" type="string">service</item>
</resources>
