<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.streamnow.lsmobile.activities.LoginActivity"
    tools:showIn="@layout/activity_login"
    android:id="@+id/login_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_weight="1"
        android:id="@+id/layout_main_logo">

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/main_logo"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_box_height"
            android:layout_gravity="center"
            android:background="@drawable/text_view_border"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/login_user"
                android:padding="4dp"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/userEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/username_hint"
                android:background="@android:color/transparent"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_weight="6"
                android:singleLine="true"
                android:imeOptions="actionNext" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_box_height"
            android:layout_gravity="center"
            android:background="@drawable/text_view_border"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:src="@drawable/login_passwd"
                android:padding="4dp"
                android:layout_weight="1"/>
            <EditText
                android:id="@+id/passwdEditText"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/password_hint"
                android:password="true"
                android:background="@android:color/transparent"
                android:textCursorDrawable="@drawable/cursor_color"
                android:layout_weight="6"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|right"
            android:layout_marginTop="10dp">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch_loggged"
                android:text="@string/switch_loggued" />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="25dp"
            android:text="@string/login_button_title1"
            android:textColor="#fff"
            android:textSize="16dp"
            android:background="@drawable/login_button_states" />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="75dp"
            android:text="@string/reset_button_title"
            android:textColor="#fff"
            android:textSize="16dp"
            android:background="@drawable/login_button_states"
            />
    </LinearLayout>

</LinearLayout>
